Fix bugs on Safari 13 and over

--- a/css/main.css
+++ b/css/main.css
@@ -1717,6 +1717,7 @@ img {
 
 #team .section-img {
   right: 225px;
+  display: inline-block;
 }
 
 #team .section-content {
