--- a/scss/blocks/_team.scss
+++ b/scss/blocks/_team.scss
@@ -8,6 +8,7 @@
 
   .section-img {
     right: 225px;
+    display: inline-block;
   }
   .section-content {
     max-width: 350px;
